# log_viewer

./: .gitignore  .kilocodemodes  CLAUDE.md  README.md  dkhatqniahtike4qprgsrfe4nb86rjvk.darc  main.py  manifest  pyproject.toml  qbbrhglbg9v5otitovoendlov6khgp2k.darc  sgluiinpcnktg1omdhid9a5otpcgclbr.darc
.beads/: metadata.json
.github/workflows/: build.yml
docs/: BUILD.md  FILE_ASSOCIATION.md  MULTI_INSTANCE.md  SPEC-INDEX.md  SPEC.md  spec_on_comman.md  style_example
docs/audit/: AUDIT_REPORT.md  CATEGORY_PANEL_AUDIT_REPORT.md  CATEGORY_TREE_CLICK_TARGET_SPACING_AUDIT_REPORT.md  CATEGORY_TREE_EXPAND_COLLAPSE_AUDIT_REPORT.md  FILE_ASSOCIATION_AUDIT_REPORT.md  FILE_OPEN_DIALOG_AUDIT_REPORT.md  FIX_PROMPT_CATEGORY_STATE_PERSISTENCE.md  HARDCODED_COLORS_AUDIT.md  LOG_ENTRY_OPTIMIZATION_AUDIT_REPORT.md  LOG_LEVEL_TEXT_COLOR_AUDIT_REPORT.md  MEMORY_MODEL_AUDIT_REPORT.md  NATIVE_CHECKBOX_UNIFICATION_AUDIT_REPORT.md  PANEL_TOGGLE_FIX_AUDIT_REPORT.md  REMOVE_TOGGLESTRIP_AUDIT_REPORT.md  SETTINGS_PERSISTENCE_FIX_AUDIT_REPORT.md  (+4 more)
packaging/: build_dmg.sh  icon.icns  log-viewer-windows.spec  log-viewer.spec  make_icons.sh
plans/: design_analysis.md  saved_filters_plan.md  table_cell_text_overflow_plan.md  typography_system_plan.md  ui_refactoring_plan.md
src/: demo_ui.py  main.py
tests/: __init__.py  conftest.py  test_category_panel.py  test_category_tree.py  test_colors.py  test_command_parser.py  test_command_service.py  test_dimensions.py  test_file_association.py  test_filter_engine.py  test_highlight_delegate.py  test_highlight_engine.py  test_highlights_tab.py  test_integration.py  test_log_document.py  test_log_table_view.py  test_main_status_bar.py  test_main_window.py  test_main_window_panel_toggle.py  test_multi_instance.py  test_parser.py  test_saved_filter.py  test_selection_state.py  test_settings_manager.py  test_statistics.py  test_stylesheet.py  test_typography.py
(+200 files in other folders)
